# stm32f3

./: Cargo.toml  openocd.cfg
src/: main.rs
